--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.hibernate.ddl-auto= update
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
 
 
 server.address=0.0.0.0
